# gpt_ch_01

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  LICENSE  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: default.yaml
configs/env/: multi_agent.yaml  single_agent.yaml
configs/eval/: default.yaml
configs/llm/: benchmark.yaml
configs/train/: bc.yaml  ppo.yaml  sac.yaml  td3.yaml
data/samples/: README.md  metadata.json
docs/design/: domain_math.md
scripts/: benchmark_llms.py  reproduce_objective1.py
src/mev_agentic_ai/agents/: drl_agent.py  integrated_agent.py
src/mev_agentic_ai/config/: settings.py
src/mev_agentic_ai/data/: adapters.py  fixtures.py  schemas.py  sync.py
src/mev_agentic_ai/domain/: __init__.py  constraints.py  cpmm.py  models.py  profit.py  units.py
src/mev_agentic_ai/envs/: triangular_arb_env.py
src/mev_agentic_ai/evaluation/: failures.py  metrics.py  reporting.py
src/mev_agentic_ai/experiments/: objective1.py
src/mev_agentic_ai/llm/: benchmark.py  mock.py  schemas.py
src/mev_agentic_ai/multiagent/: README.md
src/mev_agentic_ai/solvers/: base.py  baselines.py  offline.py  rl.py
src/mev_agentic_ai/utils/: logging.py  (+1 more)
tests/fixtures/: candidate_paths.json  gas_blocks.json  pool_reserves.json  pools.json  tokens.json
tests/integration/: test_reproduce_objective1_smoke.py
tests/regression/: test_domain_determinism.py
tests/unit/: test_config_templates_exist.py  test_domain_scaffold.py  test_imports.py  test_llm_mock_schema.py  test_solver_protocol.py
(+4 files in other folders)
